chore: fix sonar issues (#88)